testdata/golden/sema/invalid/tuple_mismatch.fmt
// scenario: tuple type mismatches
fn bad_element() -> (int, string) {
    return (1, 2);
}
